# entropy_ui

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md
src/: app.rs  main.rs
src/formatting/: bits.rs  matrix.rs  mod.rs  probability.rs
src/state/: code_config.rs  experiments.rs  mod.rs
src/ui/: labs1to3.rs  labs4to6.rs  mod.rs  widgets.rs
src/utils/: statistics.rs
